--- a/catalog/view/theme/default/template/account/address_form.twig
+++ b/catalog/view/theme/default/template/account/address_form.twig
@@ -319,7 +319,16 @@
           </fieldset>
           <div class="buttons my-5">
             <a href="{{ back }}" class="button">{{ button_back }}</a>
-            <button type="submit" class="button is-primary is-outlined">{{ button_continue }}</button>
+            <button type="submit" class="button is-success">
+              <span class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="24" width="24">
+                  <path d="M10.15625 13.125v-2.978125a0.99375 0.99375 0 0 0 -0.9962500000000001 -0.9925H5.84a0.99375 0.99375 0 0 0 -0.9962500000000001 0.9925V13.125m5.3125 -11.071875v1.47625a0.99375 0.99375 0 0 1 -0.9962500000000001 0.9925H5.84A0.99375 0.99375 0 0 1 4.84375 3.529375V1.875m5.3125 0.17812499999999998A1.9975 1.9975 0 0 0 9.33125 1.875H4.84375m5.3125 0.17812499999999998c0.21499999999999997 0.0975 0.413125 0.23375 0.58375 0.403125l1.48875 1.484375A1.98125 1.98125 0 0 1 12.8125 5.34375v5.795A1.98875 1.98875 0 0 1 10.820625 13.125H4.18A1.98875 1.98875 0 0 1 2.1875 11.139375000000001V3.8600000000000003A1.98875 1.98875 0 0 1 4.18 1.875H4.84375" stroke-width="1"></path>
+                </svg>
+              </span>
+              <span>
+                {{ button_save }}
+              </span>
+            </button>
           </div>
         </form>
         {{ content_bottom }}
