--- a/catalog/view/theme/default/template/account/affiliate.twig
+++ b/catalog/view/theme/default/template/account/affiliate.twig
@@ -348,11 +348,11 @@
             {{ text_agree }}
           </label>
           <div class="buttons my-5">
-            <button type="submit" value="" class="button is-primary is-outlined">{{ button_continue }}</button>
+            <button type="submit" value="" class="button is-primary">{{ button_continue }}</button>
           </div>
           {% else %}
           <div class="buttons my-5">
-              <button type="submit" value="" class="button is-primary is-outlined">{{ button_continue }}</button>
+              <button type="submit" value="" class="button is-primary">{{ button_continue }}</button>
           </div>
           {% endif %}
         </form>
