--- a/catalog/view/theme/default/template/account/edit.twig
+++ b/catalog/view/theme/default/template/account/edit.twig
@@ -243,7 +243,7 @@
           </fieldset>
           <div class="block my-4">
             <a href="{{ back }}" class="button">{{ button_back }}</a>
-            <button type="submit" class="button is-primary is-outlined">{{ button_save }}</button>
+            <button type="submit" class="button is-primary">{{ button_save }}</button>
           </div>
         </form>
       </div>
