--- a/catalog/view/theme/default/template/account/forgotten.twig
+++ b/catalog/view/theme/default/template/account/forgotten.twig
@@ -38,7 +38,7 @@
           </div>
           <div class="buttons my-5">
             <a href="{{ back }}" class="button">{{ button_back }}</a>
-            <button type="submit" class="button is-primary is-outlined">{{ button_continue }}</button>
+            <button type="submit" class="button is-primary is-light">{{ button_send }}</button>
           </div>
         </form>
       </div>
