--- a/catalog/view/theme/default/template/account/login_modal.twig
+++ b/catalog/view/theme/default/template/account/login_modal.twig
@@ -1,5 +1,5 @@
 <div class="modal-card-head">
-  <p class="modal-card-title">{{ text_login }}</p>
+  <p class="modal-card-title has-text-weight-bold">{{ text_login }}</p>
   <button class="delete is-large"></button>
 </div>
 <form id="login-modal-form" class="modal-card-body" action="{{ action }}" method="post" enctype="multipart/form-data">
@@ -17,20 +17,20 @@
   </div>
 </form>
 <div class="modal-card-foot is-justify-content-space-between">  
-  <button type="submit" class="button is-primary is-outlined" form="login-modal-form">
+  <button type="submit" class="button is-primary" form="login-modal-form">
     <span class="icon">
-      <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0z"/>
-        <path fill-rule="evenodd" d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="20" width="20">
+        <path d="M8.435 13.125H4.0625c-0.690625 0 -1.25 -0.719375 -1.25 -1.606875V3.48125c0 -0.8868750000000001 0.559375 -1.60625 1.25 -1.60625h4.375" stroke-width="1"></path>
+        <path d="M8.125 9.6875 5.9375 7.5 8.125 5.3125m4.0625 2.185h-6.25" stroke-width="1"></path>
       </svg>
     </span>
     <span>{{ button_login }}</span>
   </button>
-  <a href="{{ register }}" class="button is-success is-outlined">
+  <a href="{{ register }}" class="button is-success">
     <span class="icon">
-      <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
-        <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"/>
-        <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5"/>
+      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="20" width="20">
+        <path d="M5.625 4.6875a1.875 1.875 0 1 0 3.75 0 1.875 1.875 0 1 0 -3.75 0" stroke-width="1"></path>
+        <path d="M12.1875 12.8125c-0.296875 -5.833125 -9.078125 -5.833125 -9.375 0m3.4375 -1.25h2.5m-1.25 -1.25v2.5" stroke-width="1"></path>
       </svg>
     </span>
     <span>{{ button_create_account }}</span>
