--- a/catalog/view/theme/default/template/account/newsletter.twig
+++ b/catalog/view/theme/default/template/account/newsletter.twig
@@ -46,7 +46,7 @@
           </fieldset>
           <div class="buttons my-5">
             <a href="{{ back }}" class="button">{{ button_back }}</a>
-            <input type="submit" value="{{ button_continue }}" class="button is-primary is-outlined" />
+            <button type="submit" class="button is-primary">{{ button_save }}</button>
           </div>
         </form>
         {{ content_bottom }}</div>
