--- a/catalog/view/theme/default/template/account/password.twig
+++ b/catalog/view/theme/default/template/account/password.twig
@@ -44,9 +44,9 @@
               </div>
             </div>
           </fieldset>
-          <div class="buttons my-4">
-            <a href="{{ back }}" class="button is-outlined">{{ button_back }}</a>
-            <button type="submit" class="button is-primary is-outlined">{{ button_continue }}</button>
+          <div class="buttons my-5">
+            <a href="{{ back }}" class="button">{{ button_back }}</a>
+            <button type="submit" class="button is-primary">{{ button_continue }}</button>
           </div>
         </form>
         {{ content_bottom }}
