--- a/catalog/view/theme/default/template/account/transaction.twig
+++ b/catalog/view/theme/default/template/account/transaction.twig
@@ -54,7 +54,7 @@
           <div class="column is-narrow">{{ results }}</div>
         </div>
         <div class="buttons">
-          <a href="{{ continue }}" class="button is-primary is-outlined">{{ button_continue }}</a>
+          <a href="{{ continue }}" class="button">{{ button_back }}</a>
         </div>
         {{ content_bottom }}
       </div>
