--- a/catalog/view/theme/default/template/checkout/success.twig
+++ b/catalog/view/theme/default/template/checkout/success.twig
@@ -26,8 +26,7 @@
         <div class="pb-3 has-text-centered">
           <span class="icon is-large has-text-success">
             <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" viewBox="0 0 16 16">
-              <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0"/>
-              <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z"/>
+              <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
             </svg>            
           </span>
         </div>
@@ -36,7 +35,7 @@
           {{ text_message }}
         </div>        
         <div class="buttons my-5 is-centered">
-          <a href="{{ continue }}" class="button is-primary is-outlined">{{ button_continue }}</a>
+          <a href="{{ continue }}" class="button is-primary is-light">{{ button_continue }}</a>
         </div>
       </div>
       {{ column_right }}
