--- a/catalog/view/theme/default/template/checkout/total.twig
+++ b/catalog/view/theme/default/template/checkout/total.twig
@@ -25,7 +25,7 @@
     {% endif %}
   </ul>
   <div class="buttons mt-5 mb-0">
-    <button id="confirm-checkout" class="button is-primary is-fullwidth">{{ text_checkout_confirm_button }}</button>
-    <a href="{{ cart }}" class="button is-primary is-light is-fullwidth mb-0">{{ text_to_cart }}</a>
+    <button id="confirm-checkout" class="button is-primary is-medium is-fullwidth">{{ text_checkout_confirm_button }}</button>
+    <a href="{{ cart }}" class="button is-primary is-medium is-light is-fullwidth mb-0">{{ text_to_cart }}</a>
   </div>
 </div>
