--- a/catalog/view/theme/default/template/common/menu.twig
+++ b/catalog/view/theme/default/template/common/menu.twig
@@ -7,8 +7,8 @@
           <div class="navbar-item catalog-trigger">
             <button class="button is-light is-primary pl-5 pr-4 is-flex is-aling-items-center is-fullwidth">
               <span class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                  <path d="M1 2.5A1.5 1.5 0 0 1 2.5 1h3A1.5 1.5 0 0 1 7 2.5v3A1.5 1.5 0 0 1 5.5 7h-3A1.5 1.5 0 0 1 1 5.5zM2.5 2a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5zm6.5.5A1.5 1.5 0 0 1 10.5 1h3A1.5 1.5 0 0 1 15 2.5v3A1.5 1.5 0 0 1 13.5 7h-3A1.5 1.5 0 0 1 9 5.5zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5zM1 10.5A1.5 1.5 0 0 1 2.5 9h3A1.5 1.5 0 0 1 7 10.5v3A1.5 1.5 0 0 1 5.5 15h-3A1.5 1.5 0 0 1 1 13.5zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5zm6.5.5A1.5 1.5 0 0 1 10.5 9h3a1.5 1.5 0 0 1 1.5 1.5v3a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 13.5zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 14 14" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="20" width="20">
+                  <path d="M1.6250000000000002 3.6562500000000004c0 -0.9576666666666668 0 -1.4365000000000003 0.2979166666666667 -1.7333333333333336C2.219208333333334 1.6250000000000002 2.698041666666667 1.6250000000000002 3.6562500000000004 1.6250000000000002c0.9576666666666668 0 1.4365000000000003 0 1.7333333333333336 0.2979166666666667 0.2979166666666667 0.2968333333333334 0.2979166666666667 0.7756666666666667 0.2979166666666667 1.7333333333333336 0 0.9576666666666668 0 1.4365000000000003 -0.2979166666666667 1.7333333333333336 -0.2968333333333334 0.2979166666666667 -0.7756666666666667 0.2979166666666667 -1.7333333333333336 0.2979166666666667 -0.9576666666666668 0 -1.4365000000000003 0 -1.7333333333333336 -0.2979166666666667C1.6250000000000002 5.093291666666667 1.6250000000000002 4.614458333333334 1.6250000000000002 3.6562500000000004m0 5.691291666666667c0 -0.9576666666666668 0 -1.4365000000000003 0.2979166666666667 -1.7333333333333336 0.2968333333333334 -0.2979166666666667 0.7756666666666667 -0.2979166666666667 1.7333333333333336 -0.2979166666666667 0.9576666666666668 0 1.4365000000000003 0 1.7333333333333336 0.2979166666666667 0.2979166666666667 0.2968333333333334 0.2979166666666667 0.7756666666666667 0.2979166666666667 1.7333333333333336 0 0.9576666666666668 0 1.4365000000000003 -0.2979166666666667 1.7333333333333336 -0.2968333333333334 0.2979166666666667 -0.7756666666666667 0.2979166666666667 -1.7333333333333336 0.2979166666666667 -0.9576666666666668 0 -1.4365000000000003 0 -1.7333333333333336 -0.2979166666666667C1.6250000000000002 10.784583333333336 1.6250000000000002 10.305750000000002 1.6250000000000002 9.348083333333333M7.312500000000001 3.6562500000000004c0 -0.9576666666666668 0 -1.4365000000000003 0.2979166666666667 -1.7333333333333336 0.2968333333333334 -0.2979166666666667 0.7756666666666667 -0.2979166666666667 1.7333333333333336 -0.2979166666666667 0.9576666666666668 0 1.4365000000000003 0 1.7333333333333336 0.2979166666666667 0.2979166666666667 0.2968333333333334 0.2979166666666667 0.7756666666666667 0.2979166666666667 1.7333333333333336 0 0.9576666666666668 0 1.4365000000000003 -0.2979166666666667 1.7333333333333336 -0.2968333333333334 0.2979166666666667 -0.7756666666666667 0.2979166666666667 -1.7333333333333336 0.2979166666666667 -0.9576666666666668 0 -1.4365000000000003 0 -1.7333333333333336 -0.2979166666666667 -0.2979166666666667 -0.2968333333333334 -0.2979166666666667 -0.7756666666666667 -0.2979166666666667 -1.7333333333333336m0 5.691291666666667c0 -0.9576666666666668 0 -1.4365000000000003 0.2979166666666667 -1.7333333333333336 0.2968333333333334 -0.2979166666666667 0.7756666666666667 -0.2979166666666667 1.7333333333333336 -0.2979166666666667 0.9576666666666668 0 1.4365000000000003 0 1.7333333333333336 0.2979166666666667 0.2979166666666667 0.2968333333333334 0.2979166666666667 0.7756666666666667 0.2979166666666667 1.7333333333333336 0 0.9576666666666668 0 1.4365000000000003 -0.2979166666666667 1.7333333333333336 -0.2968333333333334 0.2979166666666667 -0.7756666666666667 0.2979166666666667 -1.7333333333333336 0.2979166666666667 -0.9576666666666668 0 -1.4365000000000003 0 -1.7333333333333336 -0.2979166666666667 -0.2979166666666667 -0.2968333333333334 -0.2979166666666667 -0.7756666666666667 -0.2979166666666667 -1.7333333333333336" stroke-width="1"></path>
                 </svg>
               </span>
               <span>{{ text_category }}</span>
@@ -43,30 +43,30 @@
           <div class="icons-menu is-flex is-align-items-center is-justify-content-flex-end has-background-white">
             <span class="mobile-menu-trigger is-hidden-desktop has-text-primary">
               <span class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="24" width="24">
+                  <path d="M2.8125 4.0625h9.375M2.8125 7.5h9.375m-9.375 3.4375h9.375" stroke-width="1"></path>
                 </svg>
               </span>
             </span>
             <span class="search-trigger has-text-primary is-clickable">
               <span class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
-                  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor"  height="24" width="24">
+                  <path d="m10.558125 10.575000000000001 1.925 1.925m-0.555625 -5.261875c0 2.6168750000000003 -2.114375 4.738125 -4.721875 4.738125 -2.6081250000000002 0 -4.7225 -2.12125 -4.7225 -4.7375C2.483125 4.6206249999999995 4.5975 2.5 7.205 2.5c2.6081250000000002 0 4.7225 2.12125 4.7225 4.738125" stroke-width="1"></path>
                 </svg>
               </span>
             </span>
             <a rel="nofollow" href="{{ compare }}" class="compare has-text-primary">
               <span class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
-                  <path d="M4 11H2v3h2v-3zm5-4H7v7h2V7zm5-5v12h-2V2h2zm-2-1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1h-2zM6 7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zm-5 4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-3z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="24" width="24">
+                  <path d="M9.375 5.893125V3.125a1.25 1.25 0 0 0 -1.25 -1.25h-1.25a1.25 1.25 0 0 0 -1.25 1.25v5.17875m3.75 -2.410625V13.125m0 -7.231875h2.5a1.25 1.25 0 0 1 1.25 1.25V11.875a1.25 1.25 0 0 1 -1.25 1.25h-2.5m0 0H5.625m0 0v-4.82125M5.625 13.125H3.125a1.25 1.25 0 0 1 -1.25 -1.25v-2.32125a1.25 1.25 0 0 1 1.25 -1.25h2.5" stroke-width="1"></path>
                 </svg>
               </span>
               <span class="has-background-danger has-text-white badge">{{ compare_badge_products }}</span>
             </a>
             <a rel="nofollow" class="wishlist has-text-primary" href="{{ wishlist }}">
               <span class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
-                  <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="24" width="24">
+                  <path d="M4.84375 2.1875C3.2043749999999998 2.1875 1.875 3.5999999999999996 1.875 5.341875 1.875 8.828125 7.5 12.8125 7.5 12.8125s5.625 -3.984375 5.625 -7.470625C13.125 3.1837500000000003 11.795625000000001 2.1875 10.15625 2.1875c-1.1625 0 -2.16875 0.71 -2.65625 1.74375 -0.48750000000000004 -1.03375 -1.4937500000000001 -1.74375 -2.65625 -1.74375" stroke-width="1"></path>
                 </svg>
               </span>
               <span class="has-background-danger has-text-white badge">{{ wishlist_badge_products }}</span>
@@ -74,9 +74,10 @@
             {% if logged %}
             <a rel="nofollow" class="account has-text-primary" href="{{ account }}">
               <span class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
-                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="24" width="24">
+                  <path d="M5.9375 5.6875a1.5625 1.5625 0 1 0 3.125 0 1.5625 1.5625 0 1 0 -3.125 0" stroke-width="1"></path>
+                  <path d="M1.875 7.5a5.625 5.625 0 1 0 11.25 0 5.625 5.625 0 1 0 -11.25 0" stroke-width="1"></path>
+                  <path d="M10.625 12c-0.198125 -3.8668750000000003 -6.051875 -3.8668750000000003 -6.25 0" stroke-width="1"></path>
                 </svg>
               </span>
               <span class="has-background-success logged"></span>
@@ -84,19 +85,19 @@
             {% else %}
             <span class="account login-trigger has-text-primary is-clickable">
               <span class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 16 16">
-                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="24" width="24">
+                  <path d="M5.9375 5.6875a1.5625 1.5625 0 1 0 3.125 0 1.5625 1.5625 0 1 0 -3.125 0" stroke-width="1"></path>
+                  <path d="M1.875 7.5a5.625 5.625 0 1 0 11.25 0 5.625 5.625 0 1 0 -11.25 0" stroke-width="1"></path>
+                  <path d="M10.625 12c-0.198125 -3.8668750000000003 -6.051875 -3.8668750000000003 -6.25 0" stroke-width="1"></path>
                 </svg>
               </span>
               <span class="has-background-danger not-logged"></span>
             </span>
-            {% endif %}
-            
+            {% endif %}            
             <a href="{{ cart }}" class="cart-icon has-text-primary">
               <span class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
-                  <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="24" width="24">
+                  <path d="M10.3125 13.125a0.9375 0.9375 0 1 0 0 -1.875 0.9375 0.9375 0 0 0 0 1.875m-5 0a0.9375 0.9375 0 1 0 0 -1.875 0.9375 0.9375 0 0 0 0 1.875M2.31875 3.375h9.508750000000001c0.86125 0 1.4831250000000002 0.79375 1.2468750000000002 1.5925l-1.03375 3.5C11.881250000000001 9.004999999999999 11.3725 9.375 10.79375 9.375H5.07c-0.579375 0 -1.08875 -0.370625 -1.2475 -0.9075zm0 0L1.875 1.875" stroke-width="1"></path>
                 </svg>
               </span>
               <span class="has-background-danger has-text-white badge">{{ cart_badge_products }}</span>
