--- a/catalog/view/theme/default/template/extension/module/blog_featured.twig
+++ b/catalog/view/theme/default/template/extension/module/blog_featured.twig
@@ -51,7 +51,7 @@
       </div>
       {% endfor %}
       <div class="column is-12 has-text-centered mt-5">
-        <a class="button is-primary is-medium is-outlined" href="{{ blog_latest }}">{{ text_all_news }}</a>
+        <a class="button is-primary is-medium is-light" href="{{ blog_latest }}">{{ text_all_news }}</a>
       </div>
     </div>
     {% endif %}
