--- a/catalog/view/theme/default/template/extension/payment/bank_transfer.twig
+++ b/catalog/view/theme/default/template/extension/payment/bank_transfer.twig
@@ -6,7 +6,7 @@
     <p>{{ bank }}</p>
   </div>
   <div class="buttons mb-0">
-    <button type="button" id="button-confirm" class="button is-primary">{{ button_confirm }}</button>
+    <button type="button" id="button-confirm" class="button is-primary is-medium is-fullwidth mb-0">{{ button_confirm }}</button>
   </div>
 </div>
 <script>
