--- a/catalog/view/theme/default/template/extension/payment/cod.twig
+++ b/catalog/view/theme/default/template/extension/payment/cod.twig
@@ -5,7 +5,7 @@
   {{ text_cod_confirm }}
 </div>
 <div class="buttons mb-0">
-  <button type="button" id="button-confirm" class="button is-primary is-fullwidth mb-0">{{ button_confirm }}</button>
+  <button type="button" id="button-confirm" class="button is-primary is-medium is-fullwidth mb-0">{{ button_confirm }}</button>
 </div>
 
 <script>
