--- a/admin/view/template/setting/store_form.twig
+++ b/admin/view/template/setting/store_form.twig
@@ -509,6 +509,19 @@
               <fieldset>
                 <legend>{{ text_checkout }}</legend>
                 <div class="form-group">
+                  <label class="col-sm-2 control-label"><span data-toggle="tooltip" title="{{ help_ask_payment_address }}">{{ entry_ask_payment_address }}</span></label>
+                  <div class="col-sm-10">
+                    <label class="radio-inline">
+                      <input type="radio" name="config_ask_payment_address" value="1" {{ config_ask_payment_address ? 'checked' : '' }}>
+                      {{ text_yes }}
+                    </label>
+                    <label class="radio-inline">
+                      <input type="radio" name="config_ask_payment_address" value="0" {{ not config_ask_payment_address ? 'checked' : '' }}>
+                      {{ text_no }}
+                    </label>
+                  </div>
+                </div>
+                <div class="form-group">
                   <label class="col-sm-2 control-label">{{ entry_cart_weight }}</label>
                   <div class="col-sm-10">
                     <label class="radio-inline">
