--- a/catalog/view/theme/default/template/account/order_info.twig
+++ b/catalog/view/theme/default/template/account/order_info.twig
@@ -31,78 +31,98 @@
         <h1 class="title is-3">{{ heading_title }}</h1>
         <div class="box">
           <div class="columns is-mobile is-multiline">
-            <div class="column is-6-desktop is-6-tablet is-12-mobile">
-              {% if invoice_no %}
-              <p><b>{{ text_invoice_no }}</b> {{ invoice_no }}</p>
-              {% endif %}
-              <p><b>{{ text_order_id }}</b> #{{ order_id }}</p>
-              <p><b>{{ text_date_added }}</b> {{ date_added }}</p>
+            <div class="column is-4-desktop is-4-tablet is-12-mobile is-flex is-align-items-center">
+              <div class="button is-light is-medium is-fullwidth">
+                <span class="icon is-medium has-text-primary">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="100" width="100">
+                    <path d="M10.3125 3.125V1.875m-5.625 1.25V1.875M2.03125 5h10.9375m-6.557500000000001 3.90125 0.64625 0.738125c0.059375 0.068125 0.16625 0.0625 0.21875 -0.01l1.3125 -1.816875" stroke-width="1"></path>
+                    <path d="M1.875 6.2775c0 -1.3218750000000001 0 -1.983125 0.2725 -2.488125a2.435 2.435 0 0 1 1.0925 -1.031875C3.775 2.5 4.475 2.5 5.875 2.5h3.25c1.4000000000000001 0 2.1 0 2.6350000000000002 0.2575 0.470625 0.22625 0.8525 0.5874999999999999 1.0925 1.03125 0.2725 0.5062500000000001 0.2725 1.1675 0.2725 2.489375v3.07c0 1.3218750000000001 0 1.983125 -0.2725 2.488125a2.435 2.435 0 0 1 -1.0925 1.031875C11.225000000000001 13.125 10.525 13.125 9.125 13.125H5.875c-1.4000000000000001 0 -2.1 0 -2.6350000000000002 -0.2575a2.435 2.435 0 0 1 -1.0925 -1.03125C1.875 11.33 1.875 10.66875 1.875 9.346875z" stroke-width="1"></path>
+                  </svg>
+                </span>
+                <span class="is-size-6 has-text-weight-bold">{{ date_added }}</span>
+              </div>
             </div>
-            <div class="column is-6-desktop is-6-tablet is-12-mobile">
-            {% if payment_method %}
-              <p><b>{{ text_payment_method }}</b> {{ payment_method }}</p>
-            {% endif %}
             {% if shipping_method %}
-              <p><b>{{ text_shipping_method }}</b> {{ shipping_method }}</p>
+            <div class="column is-4-desktop is-4-tablet is-12-mobile is-flex is-align-items-center">
+              <div class="button is-light is-medium is-fullwidth">
+                <span class="icon is-medium has-text-primary">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="100" width="100">
+                    <path d="m7.5 13.125 5.081875 -2.63c0.1975 -0.10250000000000001 0.29625 -0.153125 0.368125 -0.22875a0.625 0.625 0 0 0 0.14125000000000001 -0.233125c0.03375 -0.099375 0.03375 -0.21000000000000002 0.03375 -0.4325V4.708125M7.5 13.125l-5.081875 -2.63c-0.1975 -0.10250000000000001 -0.29625 -0.153125 -0.368125 -0.22875a0.630625 0.630625 0 0 1 -0.14125000000000001 -0.233125C1.875 9.93375 1.875 9.8225 1.875 9.599375V4.708125M7.5 13.125v-5.664375000000001m5.625 -2.7525 -5.625 2.7525m5.625 -2.7525 -2.8125 -1.45625M1.875 4.70875l5.168125 -2.6750000000000003c0.1675 -0.08625000000000001 0.250625 -0.13 0.33875 -0.14687499999999998a0.62125 0.62125 0 0 1 0.23625000000000002 0c0.08750000000000001 0.016875 0.17125 0.060625 0.338125 0.14687499999999998l2.35625 1.21875M1.875 4.70875l2.8125 1.37625m2.8125 1.37625L4.6875 6.084375m0 0 5.625 -2.8318749999999997m-5.625 2.8318749999999997v1.37625" stroke-width="1"></path>
+                  </svg>
+                </span>
+                <span class="is-size-6 has-text-weight-bold">{{ shipping_method }}</span>
+              </div>          
+            </div>
             {% endif %}
+            {% if payment_method %}
+            <div class="column is-4-desktop is-4-tablet is-12-mobile is-flex is-align-items-center">
+              <div class="button is-light is-medium is-fullwidth">
+                <span class="icon is-medium has-text-primary">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="100" width="100">
+                    <path d="M1.875 5.625v-0.5c0 -0.7000000000000001 0 -1.05 0.13625 -1.3175000000000001 0.12 -0.235625 0.310625 -0.42625 0.54625 -0.54625C2.8249999999999997 3.125 3.175 3.125 3.875 3.125h7.25c0.7000000000000001 0 1.05 0 1.316875 0.13625 0.235625 0.12 0.426875 0.310625 0.546875 0.54625 0.13625 0.266875 0.13625 0.616875 0.13625 1.315625V5.625M1.875 5.625h11.25M1.875 5.625v4.25c0 0.7000000000000001 0 1.05 0.13625 1.3175000000000001a1.25 1.25 0 0 0 0.54625 0.54625c0.266875 0.13625 0.616875 0.13625 1.315625 0.13625h7.25375c0.6987500000000001 0 1.048125 0 1.315 -0.13625 0.235625 -0.12 0.426875 -0.31125 0.546875 -0.54625 0.13625 -0.2675 0.13625 -0.61625 0.13625 -1.315V5.625M3.75 9.375h2.5" stroke-width="1"></path>
+                  </svg>
+                </span>
+                <span class="is-size-6 has-text-weight-bold">{{ payment_method }}</span>
+              </div>           
             </div>
+            {% endif %}       
+            {% if shipping_address %}
             <div class="column is-12">
-              {% if shipping_address %}
-              <b>{{ text_shipping_address }}: </b>{{ shipping_address }}
-              {% endif %}
+              <p class="is-size-7 has-text-grey mb-2">{{ text_shipping_address }}</p>            
+              <p>{{ shipping_address }}</p>              
             </div>
+            {% endif %}
           </div>
         </div>
         <div class="box">
           {% for product in products %}
           <div class="columns is-mobile is-multiline">
-            <div class="column is-3-desktop is-8-tablet is-9-mobile">
-              <p class="is-size-7 has-text-grey">{{ column_name }}</p>
-              <p>
-                <a href="{{ product.href }}" target="_blank">{{ product.name }}</a>
-              </p>
-              {% for option in product.option %} <br />
-              <small> - {{ option.name }}: {{ option.value }}</small>
-              {% endfor %}
+            <div class="column is-8-desktop is-7-tablet is-12-mobile">
+              <div class="columns is-mobile">
+                <div class="column is-narrow">
+                  <figure class="image is-48x48">
+                    <img src="{{ product.thumb }}" alt="{{ product.name }}" />
+                  </figure>
+                </div>
+                <div class="column">                  
+                  <p>
+                    <a href="{{ product.href }}" target="_blank">{{ product.name }}</a>
+                  </p>
+                  <p class="mt-1">
+                    <span class="tag is-info is-light">{{ product.model }}</span>
+                  </p>
+                  {% if product.option %}
+                  <div class="mt-3">
+                    {% for option in product.option %}
+                    <p><small>{{ option.name }}: {{ option.value }}</small></p>              
+                    {% endfor %}
+                  </div>                    
+                  {% endif %}                  
+                </div>
+              </div>              
             </div>
-            <div class="column is-2-desktop is-4-tablet is-3-mobile has-text-right">
-              <p class="is-size-7 has-text-grey">{{ column_model }}</p>
-              <p>{{ product.model }}</p>
-            </div>
-            <div class="column is-1-desktop is-4-tablet is-6-mobile">
-              <p class="is-size-7 has-text-grey">{{ column_quantity }}</p>
-              <p>{{ product.quantity }}</p>
-            </div>
-            <div class="column is-2-desktop is-4-tablet is-6-mobile has-text-right">
-              <p class="is-size-7 has-text-grey">{{ column_price }}</p>
-              <p>{{ product.price }}{% if product.quantity_unit %}<small class="has-text-grey"> / {{ product.quantity_unit }}</small>{% endif %}</p>
-            </div>
-            <div class="column is-2-desktop is-4-tablet is-6-mobile">
-              <p class="is-size-7 has-text-grey">{{ column_total }}</p>
-              <p>{{ product.total }}</p>
-            </div>
-            <div class="column is-2-desktop is-4-tablet is-6-mobile has-text-right">
-              {% if product.reorder %}
-              <a href="{{ product.reorder }}" title="{{ button_reorder }}" class="button is-primary is-outlined">
-                <span class="icon">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
-                    <path d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z"/>
-                    <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
-                  </svg>
-                </span>
-              </a>
-              {% endif %}
-              <a href="{{ product.return }}" title="{{ button_return }}" class="button is-danger is-outlined">
-                <span class="icon">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
-                    <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/>
-                  </svg>
-                </span>
-              </a>
-            </div>
+            <div class="column is-4-desktop is-5-tablet is-12-mobile">
+              <div class="columns is-mobile is-multiline is-justify-content-space-between">
+                <div class="column is-narrow">
+                  <p class="is-size-7 has-text-grey">{{ column_price }}</p>
+                  <p>{{ product.price }}{% if product.quantity_unit %}<small class="has-text-grey"> / {{ product.quantity_unit }}</small>{% endif %} 
+                    <span class="tag is-light has-text-weight-bold">
+                      x{{ product.quantity }}
+                    </span>
+                  </p>
+                </div>
+                <div class="column is-narrow has-text-right">
+                  <p class="is-size-7 has-text-grey">{{ column_total }}</p>
+                  <p>                    
+                    <span class="has-text-weight-bold">
+                      {{ product.total }}
+                    </span>                    
+                  </p>
+                </div>
+              </div>
+            </div>            
           </div>
-          <hr>
+          <hr class="mt-0 mb-5">
           {% endfor %}
           <div class="block has-text-right">
             {% for total in totals %}
@@ -124,17 +144,22 @@
         <div class="box">
           <div class="title is-5">{{ text_history }}</div>
           {% for history in histories %}
-          <div class="columns is-mobile is-multiline">
-            <div class="column is-2-desktop is-3-tablet is-6-mobile">
-              <p class="is-size-7 has-text-grey">{{ column_date_added }}</p>
-              <p>{{ history.date_added }}</p>
-            </div>
-            <div class="column is-2-desktop is-3-tablet is-6-mobile">
-              <p class="is-size-7 has-text-grey">{{ column_status }}</p>
-              <p><span class="tag is-primary is-light">{{ history.status }}</span></p>
-            </div>
-            <div class="column is-8-desktop is-9-tablet is-12-mobile">
-              <p class="is-size-7 has-text-grey">{{ column_comment }}</p>
+          <div class="mb-1">
+            <div class="pb-5">
+              <p class="mb-2">
+                <span class="is-flex is-align-items-center">
+                  <span class="icon has-text-primary">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="20" width="20">
+                      <path d="M10.3125 3.125V1.875m-5.625 1.25V1.875M2.03125 5h10.9375m-6.557500000000001 3.90125 0.64625 0.738125c0.059375 0.068125 0.16625 0.0625 0.21875 -0.01l1.3125 -1.816875" stroke-width="1"></path>
+                      <path d="M1.875 6.2775c0 -1.3218750000000001 0 -1.983125 0.2725 -2.488125a2.435 2.435 0 0 1 1.0925 -1.031875C3.775 2.5 4.475 2.5 5.875 2.5h3.25c1.4000000000000001 0 2.1 0 2.6350000000000002 0.2575 0.470625 0.22625 0.8525 0.5874999999999999 1.0925 1.03125 0.2725 0.5062500000000001 0.2725 1.1675 0.2725 2.489375v3.07c0 1.3218750000000001 0 1.983125 -0.2725 2.488125a2.435 2.435 0 0 1 -1.0925 1.031875C11.225000000000001 13.125 10.525 13.125 9.125 13.125H5.875c-1.4000000000000001 0 -2.1 0 -2.6350000000000002 -0.2575a2.435 2.435 0 0 1 -1.0925 -1.03125C1.875 11.33 1.875 10.66875 1.875 9.346875z" stroke-width="1"></path>
+                    </svg>
+                  </span>
+                  <span class="has-text-weight-bold">{{ history.date_added }}</span>
+                </span>
+              </p>
+              <p class="mb-2">
+                <span class="tag is-primary is-light">{{ history.status }}</span>
+              </p>
               <p>{{ history.comment }}</p>
             </div>
           </div>
@@ -144,7 +169,7 @@
           <p>{{ text_no_results }}</p>
         {% endif %}
         <div class="buttons">
-          <a href="{{ continue }}" class="button is-primary is-outlined">{{ button_continue }}</a>
+          <a href="{{ continue }}" class="button is-primary is-light">{{ button_continue }}</a>
         </div>
       </div>
       {{ column_right }}
