--- a/catalog/view/theme/default/template/account/recurring_list.twig
+++ b/catalog/view/theme/default/template/account/recurring_list.twig
@@ -50,10 +50,10 @@
         <div class="text-right">{{ pagination }}</div>
         {% else %}
         <p>{{ text_empty }}</p>
-        {% endif %}
         <div class="buttons my-5">
-          <a href="{{ continue }}" class="button is-primary is-outlined">{{ button_continue }}</a>
+          <a href="{{ continue }}" class="button">{{ button_back }}</a>
         </div>
+        {% endif %}        
         {{ content_bottom }}
       </div>
       {{ column_right }}
