--- a/catalog/view/theme/default/template/account/return_list.twig
+++ b/catalog/view/theme/default/template/account/return_list.twig
@@ -22,7 +22,7 @@
       {% set class = 'column is-12' %}
       {% endif %}
       <div id="content" class="{{ class }}">
-        <h1 class="title is-4">{{ heading_title }}</h1>
+        <h1 class="title is-3">{{ heading_title }}</h1>
         {% if returns %}
         <div class="block">
           {% for return in returns %}
@@ -49,7 +49,7 @@
                 {{ return.name }}
               </div>
               <div class="column is-half-mobile has-text-right">
-                <a href="{{ return.href }}" title="{{ button_view }}" class="button is-primary is-outlined">
+                <a href="{{ return.href }}" title="{{ button_view }}" class="button is-primary">
                   <span class="icon">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
                       <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
@@ -68,10 +68,10 @@
         </div>
         {% else %}
         <p>{{ text_empty }}</p>
-        {% endif %}
-        <div class="block my-4">
-          <a href="{{ continue }}" class="button is-primary is-outlined">{{ button_continue }}</a>
+        <div class="block my-5">
+          <a href="{{ continue }}" class="button">{{ button_back }}</a>
         </div>
+        {% endif %}        
       </div>
       {{ column_right }}
     </div>
