--- a/catalog/view/theme/default/template/common/currency.twig
+++ b/catalog/view/theme/default/template/common/currency.twig
@@ -1,6 +1,6 @@
 {% if currencies|length > 1 %}
 <form action="{{ action }}" method="post" enctype="multipart/form-data" id="form-currency" class="mr-2">
-  <div class="select is-small is-link">
+  <div class="select is-small">
     <select name="code">
       {% for currency in currencies %}
       <option value="{{ currency.code }}" {{ currency.code == code ? 'selected' : '' }}>{{ currency.symbol_left}}{{ currency.symbol_right }}</option>
