--- a/catalog/view/theme/default/template/common/footer.twig
+++ b/catalog/view/theme/default/template/common/footer.twig
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer has-background-light">
   {% if not logged %}
   <div id="login-modal" class="modal">
     <div class="modal-background"></div>
@@ -78,9 +78,8 @@
       {% endif %}
       <a href="mailto:{{ email }}" class="is-flex is-align-items-center is-justify-content-center mt-3">
         <span class="icon is-medium has-text-link mr-1">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
-            <path
-              d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="24" width="24">
+            <path d="m1.473125 4.82125 4.362500000000001 2.90875c0.6018749999999999 0.400625 0.9025 0.60125 1.2275 0.679375a1.875 1.875 0 0 0 0.8737499999999999 0c0.325 -0.078125 0.6256249999999999 -0.27875 1.2268750000000002 -0.679375l4.362500000000001 -2.90875M4.47375 12.1875h6.05375c1.05 0 1.575 0 1.9762499999999998 -0.204375a1.875 1.875 0 0 0 0.8187500000000001 -0.819375c0.20500000000000002 -0.40125 0.20500000000000002 -0.92625 0.20500000000000002 -1.9762499999999998V5.8125c0 -1.05 0 -1.575 -0.204375 -1.9762499999999998a1.875 1.875 0 0 0 -0.819375 -0.819375c-0.40125 -0.204375 -0.92625 -0.204375 -1.9762499999999998 -0.204375H4.473125c-1.05 0 -1.575 0 -1.9762499999999998 0.204375a1.875 1.875 0 0 0 -0.8187500000000001 0.819375c-0.20500000000000002 0.40125 -0.20500000000000002 0.92625 -0.20500000000000002 1.9762499999999998v3.375c0 1.05 0 1.575 0.204375 1.9762499999999998a1.875 1.875 0 0 0 0.819375 0.819375c0.40125 0.204375 0.92625 0.204375 1.9762499999999998 0.204375" stroke-width="1"></path>
           </svg>
         </span>
         <span class="has-text-black has-text-weight-bold is-size-5">{{ email }}</span>
