--- a/catalog/view/theme/default/template/common/success.twig
+++ b/catalog/view/theme/default/template/common/success.twig
@@ -26,7 +26,7 @@
         <h1 class="title is-3">{{ heading_title }}</h1>
         {{ text_message }}
         <div class="buttons my-5">
-          <a href="{{ continue }}" class="button is-primary is-outlined">{{ button_continue }}</a>
+          <a href="{{ continue }}" class="button is-primary is-light">{{ button_continue }}</a>
         </div>
       </div>
       {{ column_right }}
