--- a/catalog/view/theme/default/template/product/manufacturer_info.twig
+++ b/catalog/view/theme/default/template/product/manufacturer_info.twig
@@ -42,13 +42,12 @@
         <hr>
   	    {% endif %}
         {% if products %}
-        <div class="is-flex is-justify-content-space-between is-align-items-center category-toolbar">
+        <div class="products-toolbar is-flex is-justify-content-space-between is-align-items-center">
           <div class="block mb-0">
-            <button type="button" class="filter-trigger button is-primary is-outlined is-hidden">
+            <button type="button" class="filter-trigger button is-primary is-light is-hidden">
               <span class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                  <path d="M7 11.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-2-3a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="20" width="20">
+                  <path d="M6.27875 11.0475v-2.44875c0 -0.34625000000000006 0 -0.52 -0.03125 -0.6875a1.83125 1.83125 0 0 0 -0.136875 -0.42875c-0.07125000000000001 -0.15437499999999998 -0.17125 -0.29625 -0.37187499999999996 -0.57875L3.7093749999999996 4.041875c-0.35374999999999995 -0.49812500000000004 -0.530625 -0.7474999999999999 -0.5225 -0.955625a0.610625 0.610625 0 0 1 0.2375 -0.459375C3.5893750000000004 2.5 3.895 2.5 4.50625 2.5h5.988125c0.61125 0 0.9168750000000001 0 1.08125 0.12687500000000002a0.60625 0.60625 0 0 1 0.2375 0.459375c0.00875 0.208125 -0.16875 0.4575 -0.521875 0.95625l-2.029375 2.86125c-0.2 0.28250000000000003 -0.300625 0.42437500000000006 -0.37187499999999996 0.57875a1.83125 1.83125 0 0 0 -0.1375 0.42937500000000006c-0.03125 0.166875 -0.03125 0.34 -0.03125 0.6875v3.6693750000000005m-2.441875 -1.22125c1.03375 -0.4575 2.4425 -0.185 2.4425 1.22125m-2.4425 -1.22125c-0.020625 1.3968749999999999 1.41375 1.7449999999999999 2.4425 1.22125" stroke-width="1"></path>
                 </svg>
               </span>
               <span>{{ text_filter_trigger }}</span>
@@ -57,8 +56,8 @@
               <div class="dropdown-trigger">
                 <button class="button" aria-haspopup="true" aria-controls="dropdown-sort">
                   <span class="icon has-text-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                      <path d="M3.5 3.5a.5.5 0 0 0-1 0v8.793l-1.146-1.147a.5.5 0 0 0-.708.708l2 1.999.007.007a.497.497 0 0 0 .7-.006l2-2a.5.5 0 0 0-.707-.708L3.5 12.293V3.5zm4 .5a.5.5 0 0 1 0-1h1a.5.5 0 0 1 0 1h-1zm0 3a.5.5 0 0 1 0-1h3a.5.5 0 0 1 0 1h-3zm0 3a.5.5 0 0 1 0-1h5a.5.5 0 0 1 0 1h-5zM7 12.5a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 0-1h-7a.5.5 0 0 0-.5.5z"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="20" width="20">
+                      <path d="M2.8125 4.375h9.375m-9.375 3.125h6.25m-6.25 3.125h2.5" stroke-width="1"></path>
                     </svg>
                   </span>
                   <span class="icon has-text-link p-1">
@@ -88,9 +87,9 @@
               <div class="dropdown-trigger">
                 <button class="button" aria-haspopup="true" aria-controls="dropdown-show">
                   <span class="icon has-text-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                      <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
-                      <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="20" width="20">
+                      <path d="M1.59375 8.37875c-0.17 -0.233125 -0.255 -0.35000000000000003 -0.31375 -0.5750000000000001a1.5375 1.5375 0 0 1 0 -0.6068749999999999c0.05875 -0.225625 0.14375000000000002 -0.3425 0.31375 -0.5750000000000001C2.524375 5.34375 4.564375 3.125 7.5 3.125c2.935625 0 4.975625 2.21875 5.90625 3.4962500000000003 0.17 0.233125 0.255 0.35000000000000003 0.31375 0.5750000000000001a1.5375 1.5375 0 0 1 0 0.6068749999999999c-0.05875 0.225625 -0.14375000000000002 0.3425 -0.31375 0.5750000000000001C12.475624999999999 9.65625 10.435625 11.875 7.5 11.875c-2.935625 0 -4.975625 -2.21875 -5.90625 -3.4962500000000003" stroke-width="1"></path>
+                      <path d="M7.5 8.75a1.25 1.25 0 1 0 0 -2.5 1.25 1.25 0 0 0 0 2.5" stroke-width="1"></path>
                     </svg>
                   </span>
                   <span class="icon is-small has-text-link p-1">
@@ -121,8 +120,8 @@
             <p class="control mb-0">
               <button class="button" id="list-view">
                 <span class="icon has-text-link">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                    <path d="M0 3a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3zm8.5-1v12H14a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H8.5zm-1 0H2a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h5.5V2z"/>
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="20" width="20">
+                    <path d="M7.5 2.1875v10.625M1.875 5.875c0 -1.4000000000000001 0 -2.1 0.2725 -2.6350000000000002a2.5 2.5 0 0 1 1.0925 -1.0925C3.775 1.875 4.475 1.875 5.875 1.875h3.25c1.4000000000000001 0 2.1 0 2.6350000000000002 0.2725a2.5 2.5 0 0 1 1.0925 1.0925C13.125 3.775 13.125 4.475 13.125 5.875v3.25c0 1.4000000000000001 0 2.1 -0.2725 2.6350000000000002a2.5 2.5 0 0 1 -1.0925 1.0925C11.225000000000001 13.125 10.525 13.125 9.125 13.125H5.875c-1.4000000000000001 0 -2.1 0 -2.6350000000000002 -0.2725a2.5 2.5 0 0 1 -1.0925 -1.0925C1.875 11.225000000000001 1.875 10.525 1.875 9.125z" stroke-width="1"></path>
                   </svg>
                 </span>
               </button>
@@ -130,8 +129,8 @@
             <p class="control mb-0">
               <button class="button" id="grid-view">
                 <span class="icon has-text-link">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                    <path d="M1 2.5A1.5 1.5 0 0 1 2.5 1h3A1.5 1.5 0 0 1 7 2.5v3A1.5 1.5 0 0 1 5.5 7h-3A1.5 1.5 0 0 1 1 5.5v-3zM2.5 2a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 1h3A1.5 1.5 0 0 1 15 2.5v3A1.5 1.5 0 0 1 13.5 7h-3A1.5 1.5 0 0 1 9 5.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zM1 10.5A1.5 1.5 0 0 1 2.5 9h3A1.5 1.5 0 0 1 7 10.5v3A1.5 1.5 0 0 1 5.5 15h-3A1.5 1.5 0 0 1 1 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3zm6.5.5A1.5 1.5 0 0 1 10.5 9h3a1.5 1.5 0 0 1 1.5 1.5v3a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 13.5v-3zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5h-3z"/>
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 14 14" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="20" width="20">
+                    <path d="M1.6250000000000002 3.6562500000000004c0 -0.9576666666666668 0 -1.4365000000000003 0.2979166666666667 -1.7333333333333336C2.219208333333334 1.6250000000000002 2.698041666666667 1.6250000000000002 3.6562500000000004 1.6250000000000002c0.9576666666666668 0 1.4365000000000003 0 1.7333333333333336 0.2979166666666667 0.2979166666666667 0.2968333333333334 0.2979166666666667 0.7756666666666667 0.2979166666666667 1.7333333333333336 0 0.9576666666666668 0 1.4365000000000003 -0.2979166666666667 1.7333333333333336 -0.2968333333333334 0.2979166666666667 -0.7756666666666667 0.2979166666666667 -1.7333333333333336 0.2979166666666667 -0.9576666666666668 0 -1.4365000000000003 0 -1.7333333333333336 -0.2979166666666667C1.6250000000000002 5.093291666666667 1.6250000000000002 4.614458333333334 1.6250000000000002 3.6562500000000004m0 5.691291666666667c0 -0.9576666666666668 0 -1.4365000000000003 0.2979166666666667 -1.7333333333333336 0.2968333333333334 -0.2979166666666667 0.7756666666666667 -0.2979166666666667 1.7333333333333336 -0.2979166666666667 0.9576666666666668 0 1.4365000000000003 0 1.7333333333333336 0.2979166666666667 0.2979166666666667 0.2968333333333334 0.2979166666666667 0.7756666666666667 0.2979166666666667 1.7333333333333336 0 0.9576666666666668 0 1.4365000000000003 -0.2979166666666667 1.7333333333333336 -0.2968333333333334 0.2979166666666667 -0.7756666666666667 0.2979166666666667 -1.7333333333333336 0.2979166666666667 -0.9576666666666668 0 -1.4365000000000003 0 -1.7333333333333336 -0.2979166666666667C1.6250000000000002 10.784583333333336 1.6250000000000002 10.305750000000002 1.6250000000000002 9.348083333333333M7.312500000000001 3.6562500000000004c0 -0.9576666666666668 0 -1.4365000000000003 0.2979166666666667 -1.7333333333333336 0.2968333333333334 -0.2979166666666667 0.7756666666666667 -0.2979166666666667 1.7333333333333336 -0.2979166666666667 0.9576666666666668 0 1.4365000000000003 0 1.7333333333333336 0.2979166666666667 0.2979166666666667 0.2968333333333334 0.2979166666666667 0.7756666666666667 0.2979166666666667 1.7333333333333336 0 0.9576666666666668 0 1.4365000000000003 -0.2979166666666667 1.7333333333333336 -0.2968333333333334 0.2979166666666667 -0.7756666666666667 0.2979166666666667 -1.7333333333333336 0.2979166666666667 -0.9576666666666668 0 -1.4365000000000003 0 -1.7333333333333336 -0.2979166666666667 -0.2979166666666667 -0.2968333333333334 -0.2979166666666667 -0.7756666666666667 -0.2979166666666667 -1.7333333333333336m0 5.691291666666667c0 -0.9576666666666668 0 -1.4365000000000003 0.2979166666666667 -1.7333333333333336 0.2968333333333334 -0.2979166666666667 0.7756666666666667 -0.2979166666666667 1.7333333333333336 -0.2979166666666667 0.9576666666666668 0 1.4365000000000003 0 1.7333333333333336 0.2979166666666667 0.2979166666666667 0.2968333333333334 0.2979166666666667 0.7756666666666667 0.2979166666666667 1.7333333333333336 0 0.9576666666666668 0 1.4365000000000003 -0.2979166666666667 1.7333333333333336 -0.2968333333333334 0.2979166666666667 -0.7756666666666667 0.2979166666666667 -1.7333333333333336 0.2979166666666667 -0.9576666666666668 0 -1.4365000000000003 0 -1.7333333333333336 -0.2979166666666667 -0.2979166666666667 -0.2968333333333334 -0.2979166666666667 -0.7756666666666667 -0.2979166666666667 -1.7333333333333336" stroke-width="1"></path>
                   </svg>
                 </span>
               </button>
@@ -148,11 +147,13 @@
           {% endif %}
           {% for product in products %}
           <div class="{{ class }}">
-            <div class="product-card box">
-              <div class="image">
-                <a href="{{ product.href }}" class="is-flex is-justify-content-center">
-                  <img src="{{ product.thumb }}" loading="lazy" alt="{{ product.name }}" title="{{ product.name }}" />
-                  <span class="tag {{ product.quantity ? 'is-success' : 'is-danger' }} is-light stock">{{ product.stock }}</span>
+            <div class="product-card card is-clipped">
+              <div class="card-image">
+                <figure class="image">
+                  <a href="{{ product.href }}" class="is-flex is-justify-content-center" aria-label="{{ product.name }}">
+                    <img src="{{ product.thumb }}" loading="lazy" alt="{{ product.name }}" title="{{ product.name }}" />
+                  </a>
+                  <span class="stock tag {{ product.quantity ? 'is-success' : 'is-danger' }} is-light">{{ product.stock }}</span>
                   {% if product.stickers %}
                   <span class="stickers is-block mb-0">
                   {% for sticker in product.stickers %}
@@ -165,13 +166,15 @@
                   {% if product.discount %}
                   <span class="discount tag is-danger">-{{ product.discount }}%</span>
                   {% endif %}
-                </a>
+                </figure>
               </div>
-              <div class="caption">
-                <a class="product-name is-block is-size-6 my-3" href="{{ product.href }}">{{ product.name }}</a>
+              <div class="card-content">
+                <div class="mb-3">
+                  <a class="product-name is-size-6" href="{{ product.href }}">{{ product.name }}</a>
+                </div>                  
                 <div class="is-flex is-justify-content-space-between is-align-items-center">
                   {% if product.price %}
-                  <div class="price is-block my-3">
+                  <div class="price">
                     {% if not product.special %}
                     <span class="actual-price">{{ product.price }}{% if product.quantity_unit %}<small class="has-text-grey"> / {{ product.quantity_unit }}</small>{% endif %}</span>
                     {% else %}
@@ -196,26 +199,34 @@
                   </span>
                   {% endif %}
                 </div>
-                <div class="actions is-flex is-justify-content-space-between">
-                  <button type="button" class="add-to-cart button is-primary is-light" data-product_id="{{ product.product_id }}" data-minimum="{{ product.minimum }}">
-                    {{ button_cart }}
+              </div>
+              <div class="actions columns is-mobile is-variable is-1 p-2 m-0">
+                <div class="column is-4">
+                  <button type="button" class="add-to-cart button is-primary is-light is-fullwidth" title="{{ button_cart }}" data-product_id="{{ product.product_id }}" data-minimum="{{ product.minimum }}">                   
+                    <span class="icon">
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="24" width="24">
+                        <path d="M6.5625 6.25h2.5m-1.25 -1.25v2.5m2.5 5.625a0.9375 0.9375 0 1 0 0 -1.875 0.9375 0.9375 0 0 0 0 1.875m-5 0a0.9375 0.9375 0 1 0 0 -1.875 0.9375 0.9375 0 0 0 0 1.875M2.31875 3.375h9.508750000000001c0.86125 0 1.4831250000000002 0.79375 1.2468750000000002 1.5925l-1.03375 3.5C11.881250000000001 9.004999999999999 11.3725 9.375 10.79375 9.375H5.07c-0.579375 0 -1.08875 -0.370625 -1.2475 -0.9075zm0 0L1.875 1.875" stroke-width="1"></path>
+                      </svg>  
+                    </span>                         
                   </button>
-                  <div>
-                    <button type="button" class="add-to-wishlist button is-primary is-light" title="{{ button_wishlist }}" data-product_id="{{ product.product_id }}">
-                      <span class="icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                          <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-                        </svg>
-                      </span>
-                    </button>
-                    <button type="button" class="add-to-compare button is-primary is-light" title="{{ button_compare }}" data-product_id="{{ product.product_id }}">
-                      <span class="icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
-                          <path d="M4 11H2v3h2v-3zm5-4H7v7h2V7zm5-5v12h-2V2h2zm-2-1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1h-2zM6 7a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v7a1 1 0 0 1-1 1H7a1 1 0 0 1-1-1V7zm-5 4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-3z"/>
-                        </svg>
-                      </span>
-                    </button>
-                  </div>
+                </div>
+                <div class="column is-4">
+                  <button type="button" class="add-to-wishlist button is-primary is-light is-fullwidth" title="{{ button_wishlist }}" data-product_id="{{ product.product_id }}">
+                    <span class="icon">
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="24" width="24">
+                        <path d="M4.84375 2.1875C3.2043749999999998 2.1875 1.875 3.5999999999999996 1.875 5.341875 1.875 8.828125 7.5 12.8125 7.5 12.8125s5.625 -3.984375 5.625 -7.470625C13.125 3.1837500000000003 11.795625000000001 2.1875 10.15625 2.1875c-1.1625 0 -2.16875 0.71 -2.65625 1.74375 -0.48750000000000004 -1.03375 -1.4937500000000001 -1.74375 -2.65625 -1.74375" stroke-width="1"></path>
+                      </svg>
+                    </span>
+                  </button>
+                </div>
+                <div class="column is-4">
+                  <button type="button" class="add-to-compare button is-primary is-light is-fullwidth" title="{{ button_compare }}" data-product_id="{{ product.product_id }}">
+                    <span class="icon">
+                      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="-0.5 -0.5 16 16" stroke-linecap="round" stroke-linejoin="round" stroke="currentColor" height="24" width="24">
+                        <path d="M9.375 5.893125V3.125a1.25 1.25 0 0 0 -1.25 -1.25h-1.25a1.25 1.25 0 0 0 -1.25 1.25v5.17875m3.75 -2.410625V13.125m0 -7.231875h2.5a1.25 1.25 0 0 1 1.25 1.25V11.875a1.25 1.25 0 0 1 -1.25 1.25h-2.5m0 0H5.625m0 0v-4.82125M5.625 13.125H3.125a1.25 1.25 0 0 1 -1.25 -1.25v-2.32125a1.25 1.25 0 0 1 1.25 -1.25h2.5" stroke-width="1"></path>
+                      </svg>
+                    </span>
+                  </button>
                 </div>
               </div>
             </div>
